--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "nyan-chart ==========",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "grunt mochaTest"
   },
   "repository": {
     "type": "git",
@@ -26,5 +26,15 @@
   "bugs": {
     "url": "https://github.com/israelst/nyan-chart/issues"
   },
-  "homepage": "https://github.com/israelst/nyan-chart"
+  "homepage": "https://github.com/israelst/nyan-chart",
+  "dependencies": {
+    "d3": "^3.4.13"
+  },
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-browserify": "^3.2.1",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-mocha-test": "^0.12.4",
+    "mocha": "^2.0.1"
+  }
 }
